SERVER-29489 Use 'maxTimeMs' when calling listDatabases against shards

(cherry picked from commit 133f0fd284abdf8a313d47b412f58e2cba60cc80)